[package]
name = "baldur"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.5"
clap = {version = "~3.1", features = ["cargo"]}
libc = "~0.2"
regex = "~1"
r_htslib = { git = "https://github.com/heathsc/r_htslib.git" }
compress_io = { git = "https://github.com/heathsc/compress_io.git" }
