[package]
name = "baldur"
version = "1.2.2"
edition = "2021"
authors = ["Simon Heath (simon.heath@gmail.com)"]
description = "Call sequence variants from mitochondrial ONT data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
stderrlog = "~0.5"
clap = {version = "~4", features = ["cargo", "color"]}
libc = "~0.2"
regex = "~1"
compress_io = "~0.5"
anyhow = "~1"
r_htslib = { git = "https://github.com/heathsc/r_htslib.git" }
